# zeltlager-website

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
dynamic/: Admin.md  Agb.html  AnmeldungBetreuer.txt  AnmeldungBetreuerErfolgreich.md  AnmeldungErfolgreich.md  Ausstattung.md  Betreuer.html  Betreuer.md  BetreuerIntern.md  Datenschutz.html  Erwischt.html  Forbidden.md  Home.md  Impressum.html  Packliste.md  Programm.md  Selbstverpflichtung.html  SelbstverpflichtungAnhang.html  Team.md  Teilnehmer.html  WebsiteInfo.md  basic.toml  intern.toml  public.toml
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  README.md  betreuer.html  erwischt.html  package.json  svelte.config.js  teilnehmer.html  vite.config.ts
frontend/src/: Betreuer.svelte  EditableProperty.svelte  Erwischt.svelte  GlobalCss.svelte  GlobalScss.svelte  SortIcon.svelte  Teilnehmer.svelte  app.d.ts  app.html  app.scss  betreuer.ts  checkbox-switch.scss  erwischt.ts  teilnehmer.ts  utils.ts
frontend/src/lib/: EditableProperty.svelte  GLightbox.svelte  Icon.svelte  PagedForm.svelte  SortIcon.svelte  SortableTable.svelte  TableContainer.svelte  utils.ts
frontend/src/lib/glightbox/: glightbox.js  glightbox.scss
frontend/src/lib/glightbox/core/: drag.js  keyboard-navigation.js  slide-parser.js  slide.js  touch-events.js  touch-navigation.js  zoom.js
frontend/src/routes/: +error.svelte  +layout.svelte  +page.md  NotFound.md
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/agb/: +page.svelte
frontend/src/routes/anmeldung/: +page.svelte
frontend/src/routes/anmeldung-erfolgreich/: +page.md
frontend/src/routes/ausstattung/: +page.md
frontend/src/routes/betreuer/: +page.md  +page.svelte
frontend/src/routes/betreuer-anmeldung-erfolgreich/: +page.md
frontend/src/routes/datenschutz/: +page.md
frontend/src/routes/erwischt/: +page.svelte
frontend/src/routes/images/: +page.svelte
frontend/src/routes/impressum/: +page.md
frontend/src/routes/intern/: +page.md
frontend/src/routes/login/: +page.svelte
frontend/src/routes/packliste/: +page.md
migrations/2018-03-31-160546_create_teilnehmer/: up.sql
migrations/2018-04-14-160821_betreuer/: down.sql  up.sql
migrations/2018-05-30-123923_betreuer-juleicafzoptional/: down.sql  up.sql
migrations/2018-07-23-081151_login/: down.sql  up.sql
migrations/2019-08-19-145823_signup_date/: down.sql  up.sql
migrations/2020-07-02-112748_add_erwischt/: down.sql  up.sql
migrations/2020-08-09-131321_add_bezahlt/: down.sql  up.sql
migrations/2021-08-16-062923_split_db_comments/: down.sql  up.sql
migrations/2023-09-10-203557_add_land/: down.sql  up.sql
migrations/2024-09-22-161658_more_fields/: down.sql  up.sql
migrations/2026-04-25-090020-0000_user_token/: down.sql  up.sql
src/: admin.rs  auth.rs  basic.rs  config.rs  discourse.rs  erwischt.rs  etag.rs  form.rs  images.rs  mail.rs  main.rs  management.rs  rate.rs  signup.rs  signup_betreuer.rs  signup_supervisor.rs  thumbs.rs
src/db/: mod.rs  models.rs  schema.rs
static/css/: style.css
static/js/: admin.js  erwischt.js  zeltlager.js
templates/: basic.tt  images.tt  login.tt  mail-body.tt  mail-payed-body.tt  mail-payed-subject.tt  mail-presignup-body.tt  mail-presignup-failed-body.tt  mail-subject.tt  resignup-mail.tt  signup.tt  signupBetreuer.tt  signupSupervisor.tt
zeltlager-website/: Cargo.toml
zeltlager-website/dynamic/: 404.html  Agb.html  Anmeldung.html  Ausstattung.html  Ausstattung.md  Datenschutz.html  Home.html  Impressum.html  Programm.html  Programm.md  Team.html  Team.md  basic.toml
zeltlager-website/migrations/2018-03-31-160546_create_teilnehmer/: down.sql
zeltlager-website/src/: basic.rs  db.rs  email.rs  main.rs  signup.rs
zeltlager-website/src/db/: models.rs  schema.rs
zeltlager-website/static/: 404.html  Anmeldung.html  Ausstattung.html  Home.html  Programm.html  Team.html
zeltlager-website/static/css/: style.css
zeltlager-website/templates/: basic.tt
(+16 files in other folders)
