[package]
name = "zeltlager-website"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2018"

[dependencies]
actix = "0.12"
actix-files = "=0.6.0-beta.6"
actix-identity = "=0.4.0-beta.2"
actix-rt = "2"
actix-service = "2"
actix-web = "=4.0.0-beta.8"
anyhow = "1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.14"
csv = "1"
diesel = { version = "1.4", features = ["chrono", "postgres", "network-address"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
heck = "0.4"
ipnetwork = "0.18"
lettre = "=0.10.0-rc.3"
log = "0.4"
mime = "0.3"
notify = "4"
printpdf = "0.4"
rand = "0.8"
rpassword = "5"
scrypt = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
t4rust-derive = "0.3"
toml = "0.5"
tokio = "1"
url = "2"

# Compile in release mode to speed up password checking
[profile.dev.package.scrypt]
opt-level = 3
