[package]
name = "zeltlager-website"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2018"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-identity = "0.5"
actix-rt = "2"
actix-service = "2"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.21"
csv = "1"
diesel = { version = "2", features = ["postgres", "network-address", "time"] }
diesel_migrations = "2"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
heck = "0.4"
ipnetwork = "0.20"
lettre = "0.10"
log = "0.4"
mime = "0.3"
notify = "6"
notify-debouncer-mini = "0.3"
printpdf = "0.6"
rand = "0.8"
rpassword = "7"
scrypt = "0.7" # 0.8 removed the old mcf format
serde = { version = "1", features = ["derive"] }
serde_json = "1"
t4rust-derive = "0.3"
time = { version = "0.3", features = ["parsing"] }
toml = "0.8"
tokio = "1"
url = "2"

# Compile in release mode to speed up password checking
[profile.dev.package.scrypt]
opt-level = 3
